# data_model_v3_scripts_local

./: CLAUDE.md  README.md  presentation.md  pyproject.toml  run_benchmark_pipeline.py  run_transformation_pipeline.py  run_view_benchmark_pipeline.py
output/benchmarks/: aggregation_benchmark_results.md  analysis_results.json  metric_mappings.json  query_index.json  raw_timing_data.csv  validation_results.json  validation_summary.md
output/reports/: create_table_eco_cross_page_preagg_pt1m_test_mul_cust.sql  table_info.json  transformation_stats.md
output/view_benchmarks/: analysis_results.json
output_1h_window/benchmarks/: aggregation_benchmark_results.md  analysis_results.json  metric_mappings.json  query_index.json  raw_timing_data.csv  validation_results.json  validation_summary.md
output_1h_window/reports/: create_table_eco_cross_page_preagg_pt1m_4cust.sql  create_table_eco_cross_page_preagg_pt1m_test.sql  create_table_eco_cross_page_preagg_pt1m_test_intigral_temp.sql  pipeline_stats.json  transformation_stats.json
output_1h_window/view_benchmarks/: raw_timing_data.csv
output_24h_window/benchmarks/: aggregation_benchmark_results.md  analysis_results.json  query_index.json  raw_timing_data.csv  validation_results.json  validation_summary.md
output_24h_window/mappings/: key_mapping_mul_cust.json
output_24h_window/reports/: create_table_eco_cross_page_preagg_pt1m_test_intigral.sql
output_24h_window/view_benchmarks/: query_index.json  view_benchmark_results.md  view_definitions.json
src/analysis/: parse_transformation_logs.py
src/config/: __init__.py  (+1 more)
(+126 files in other folders)
